# KoharuZen

./: Cargo.toml  README.md
.github/workflows/: docs.yml  publish.yml  release.yml
koharu/: tauri.conf.json
koharu-app/src/: llm.rs  session.rs
koharu-app/src/pipeline/: engine.rs  mod.rs
koharu-app/src/pipeline/engines/: llm_translate.rs
koharu-rpc/src/mcp/: mod.rs
koharu-rpc/src/routes/: pages.rs  pipelines.rs
ui/components/: MenuBar.tsx  Navigator.tsx  SettingsDialog.tsx
ui/components/canvas/: CanvasToolbar.tsx  Workspace.tsx
ui/components/panels/: TextBlocksPanel.tsx
ui/lib/api/schemas/: startPipelineRequest.ts
ui/lib/stores/: preferencesStore.ts  selectionStore.ts
ui/public/locales/en-US/: translation.json
ui/public/locales/es-ES/: translation.json
ui/public/locales/ja-JP/: translation.json
ui/public/locales/ko-KR/: translation.json
ui/public/locales/pt-BR/: translation.json
ui/public/locales/ru-RU/: translation.json
ui/public/locales/tr-TR/: translation.json
ui/public/locales/zh-CN/: translation.json
ui/public/locales/zh-TW/: translation.json
